fix text alignment in chart column labels that break over

--- a/censusreporter/apps/census/static/css/app.css
+++ b/censusreporter/apps/census/static/css/app.css
@@ -933,6 +933,7 @@ ul.quantile-legend span.quantile-label {
 .column .axis.label,
 .column-group .axis.label {
     font-weight: bold;
+    line-height: 1.1;
 }
 .column .axis.label.secondary,
 .column-group .axis.label.secondary,
